--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,17 @@
 body{
     text-align: center;
     font-family: "Arial";
-    color: deeppink;
+    color: black;
+   font-size: 1.6rem;
+}
+#container{
+width:  70%;
+padding: 1em;
+text-align: left;
+border: 1px solid #ddd;
+margin: 0 auto;
+
+}
+#container h1{
+    font-size: 2rem;
 }
