--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Arial', Courier, monospace;
     color: black;
    font-size: 1.6rem;
 }
