lo modifique en cabecera y color

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-family: 'Arial', Courier, monospace;
-    color: black;
+    color:grey;
    font-size: 1.6rem;
 }
 #container{
