cambios en cabecera color y agregados

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-family: 'Arial', Courier, monospace;
-    color: black;
+    color: rgb(16, 16, 61);
    font-size: 1.6rem;
 }
 #container{
