--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ margin: 0 auto;
 
 }
 #cabecera{
-    background-color: gold;
+    background-color: rgb(11, 11, 79);
     color:white;
     margin: 0%;
     padding: 0.5em;
