--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
     font-family: 'Arial', Courier, monospace;
     color: rgb(16, 16, 61);
    font-size: 1.6rem;
+   background-color: #4e4e4e;
 }
 #container{
 width:  70%;
@@ -10,15 +11,28 @@ padding: 0;
 text-align: left;
 border: 1px solid #ddd;
 margin: 0 auto;
+}
+#logo{
+    background-image: url(/png/GitHub-Simbolo.png);
+    width: 25px;
+    height: 25px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 
 }
 #cabecera{
     background-color: rgb(11, 11, 79);
     color:white;
     margin: 0%;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
     font-weight: bold;
     box-shadow: 0px 2px 20px 0px rgba(253, 0, 0, 0.5);
+    display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+width: 100;
+align-items: center;
+justify-items: center;
 }
 #complemento{
  padding: 0 0 0 1em;
