--- a/css/style.css
+++ b/css/style.css
@@ -33,5 +33,7 @@ margin: 0 auto;
 }
 .footer-container{
     text-align: center;
-    background-color:rgb(149, 149, 149);
+    background-color:rgb(2, 2, 2);
+    padding:6px;
+    color: rgb(16, 16, 108);
 }
