--- a/css/style.css
+++ b/css/style.css
@@ -13,26 +13,29 @@ border: 1px solid #ddd;
 margin: 0 auto;
 }
 #logo{
+
     background-image: url(/png/GitHub-Simbolo.png);
-    width: 25px;
-    height: 25px;
+    width: 70px;
+    height: 50px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: right;
+    display: grid;
+    justify-items: right;
 
 }
 #cabecera{
     background-color: rgb(11, 10, 22);
-    color:white;
+    color: white;
     margin: 0%;
     padding: 0.5em 0 0.5em 2em;
     font-weight: bold;
-    box-shadow: 0px 2px 20px 0px rgba(253, 0, 0, 0.5);
+    box-shadow: 0px 2px 20px 0px rgb(253 0 0 / 50%);
     display: grid;
-grid-template-columns: 1fr 1fr 1fr;
-width: 100;
-align-items: center;
-justify-items: center;
+    grid-template-columns: 50px 150px 250px;
+    width: 100;
+    align-items: center;
+    justify-items: left;
 }
 #complemento{
  padding: 0 0 0 1em;
